--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="es">
+<head>
+  <title>Biblioteca de Videojuegos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Este sitio web trata sobre videojuegos">
+  <meta name="keywords" content="videojuegos, colecciones, games">
+  <meta name="author" content="Antonio Cordero 2DAW 25/26">
+  <meta name="robots" content="index, follow">
+  <link rel="stylesheet" href="/public/stylesheets/style.css" />
+  
+
+</head>
+<body>
+  
+</body>
 </html>
